    last_updated_params().

  - Fixed INSERT statements w.r.t. primary key columns that have
    SQL-expression based default generators on them; SQL expression
    executes inline as normal but will not trigger a "postfetch" condition
    for the column, for those DB's who provide it via cursor.lastrowid

  - func. objects can be pickled/unpickled [ticket:844]

- orm
  - eager loading with LIMIT/OFFSET applied no longer adds the primary 
    table joined to a limited subquery of itself; the eager loads now
    join directly to the subquery which also provides the primary table's
    columns to the result set.  This eliminates a JOIN from all eager loads
    with LIMIT/OFFSET.  [ticket:843]

  - Mapped classes may now define __eq__, __hash__, and __nonzero__ methods
    with arbitrary sementics.  The orm now handles all mapped instances on
    an identity-only basis. (e.g. 'is' vs '==') [ticket:676]

  - The behavior of query.options() is now fully based on paths, i.e. an
    option such as eagerload_all('x.y.z.y.x') will apply eagerloading to
    only those paths, i.e. and not 'x.y.x'; eagerload('children.children')
    applies only to exactly two-levels deep, etc. [ticket:777]

  - The session API has been solidified:

    - It's an error to session.save() an object which is already
      persistent [ticket:840]

    - It's an error to session.delete() an object which is *not*
      persistent.

    - session.update() and session.delete() raise an error when updating
      or deleting an instance that is already in the session with a
      different identity.

    - The session checks more carefully when determining "object X already
      in another session"; e.g. if you pickle a series of objects and
      unpickle (i.e. as in a Pylons HTTP session or similar), they can go
      into a new session without any conflict

    - merge() includes a keyword argument "dont_load=True".  setting this